<resources>

    <!--Login / Register -->
    <string name="app_name">WhatsZappy</string>
    <string name="image_logo">image_logo</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="loginBtn">Login</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nao_tem_conta">Não tem conta ?</string>
    <string name="botao_cadastrar">Cadastrar</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!---->
    <string name="este_nome_ficar_vis_vel_para_seus_contatos">Este nome ficará visível para seus contatos</string>
    <string name="user_name">Nome de usuario</string>
    <string name="image_profile">imagem profile</string>
    <string name="button_config_name">button config name</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="title_activity_cadastro_grupo">CadastroGrupoActivity</string>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->


</resources>
